# rimrust

./: index.html  mods.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs  utils.rs
src-tauri/src/steamcmd/: install.rs  mod.rs  mods.rs
